<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>jclient-common-parent</artifactId>
        <groupId>ru.hh.jclient-common</groupId>
        <version>4.1.0.jakarta-rc2-SNAPSHOT</version>
    </parent>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>jclient-balancing</artifactId>

    <properties>
        <consul.client.version>1.2.13.jakarta-rc1</consul.client.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ru.hh.consul</groupId>
            <artifactId>consul-client</artifactId>
            <version>${consul.client.version}</version>
        </dependency>
        <dependency>
            <groupId>ru.hh.jclient-common</groupId>
            <artifactId>jclient-common</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>
    </dependencies>

</project>
